acronym -> abbr tags, minro template fixes, and general link colour-bg contrast improvements.

--- a/_assets/stylesheets/global.css.scss
+++ b/_assets/stylesheets/global.css.scss
@@ -24,7 +24,7 @@ $base-font-color: $dark-gray !default;
 
 $base-border-color: #ccc;
 $base-border-radius: 3px !default;
-$base-accent-color: #477DCA !default;
+$base-accent-color: darken(#477DCA, 8%);
 
 body {
   @include outer-container;
