--- a/_assets/stylesheets/header.scss
+++ b/_assets/stylesheets/header.scss
@@ -7,7 +7,7 @@
 
 div.homepage-hero {
   $base-border-radius: 3px !default;
-  $action-color: #477DCA !default;
+  $action-color: $base-accent-color;
   $large-screen: em(860) !default;
   $hero-background-top: #7F99BE;
   $hero-background-bottom: #20392B;
