--- a/_assets/stylesheets/typography.scss
+++ b/_assets/stylesheets/typography.scss
@@ -38,6 +38,7 @@ main {
       color: $medium-gray;
     }
     a {
+      color: $base-accent-color;
       padding-bottom: 1px;
       border-bottom: 1px solid #fff;
 
